// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game mutations with world as anon create game 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world as tester1 user create game 1`] = `
{
  "data": {
    "createGame": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world as tester1 user with hosted game set game map 1`] = `
{
  "data": {
    "setGameMap": ObjectContaining {
      "_id": Any<String>,
      "map": {
        "_id": Any<String>,
        "mapImage": {
          "_id": Any<String>,
          "chunks": ArrayContaining [
            {
              "_id": Any<String>,
              "fileId": Any<String>,
              "x": Any<Number>,
              "y": Any<Number>,
            },
          ],
          "height": Any<Number>,
          "width": Any<Number>,
        },
        "name": "Earth",
        "pixelsPerFoot": Any<Number>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user join existing game 1`] = `
{
  "data": {
    "joinGame": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester1",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user while having joined a game game chat 1`] = `
{
  "data": {
    "gameChat": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user while having joined a game leave game 1`] = `
{
  "data": {
    "leaveGame": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user while having joined a game set game map permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with game hosted by tester1 as tester2 user join existing game 1`] = `
{
  "data": {
    "joinGame": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester1",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with game hosted by tester1 as tester2 user while having joined a game game chat 1`] = `
{
  "data": {
    "gameChat": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with game hosted by tester1 as tester2 user while having joined a game leave game 1`] = `
{
  "data": {
    "leaveGame": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
